# MaShell

./: ARCHITECTURE.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: homebrew.yml  publish.yml
Formula/: mashell.rb
mashell/: cli.py  config.py  logo.py  session.py
mashell/agent/: __init__.py  context.py  core.py  prompt.py
mashell/permissions/: manager.py  ui.py
mashell/providers/: __init__.py  anthropic.py  azure.py  base.py  ollama.py  openai.py
mashell/tools/: __init__.py  background.py  base.py  filesystem.py  shell.py  web.py
